--- a/work/Pages/WebsocketPvp.xaml
+++ b/work/Pages/WebsocketPvp.xaml
@@ -191,12 +191,12 @@
             <Viewbox Stretch="Uniform">
                 <Ellipse HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" Height="120" >
                     <Ellipse.Fill>
-                        <ImageBrush ImageSource="../Images/user.png" />
+                        <ImageBrush x:Name="leftUserImage" ImageSource="../Images/default.png" />
                     </Ellipse.Fill>
                 </Ellipse>
             </Viewbox>
             <Viewbox Stretch="Uniform" Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom">
-                <TextBlock x:Name="leftUserName"  HorizontalAlignment="Center" VerticalAlignment="Center" Text="超级无敌暴龙战士" FontSize="20" Foreground="White"/>
+                <TextBlock x:Name="leftUserName"  HorizontalAlignment="Center" VerticalAlignment="Center" Text="玩家" FontSize="20" Foreground="White"/>
             </Viewbox>
         </Grid>
 
@@ -213,12 +213,12 @@
             <Viewbox Stretch="Uniform" Grid.Column="1">
                 <Ellipse HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" Height="120" >
                     <Ellipse.Fill>
-                        <ImageBrush ImageSource="../Images/user.png" />
+                        <ImageBrush x:Name="RightUserImage"  ImageSource="../Images/default.png" />
                     </Ellipse.Fill>
                 </Ellipse>
             </Viewbox>
             <Viewbox Stretch="Uniform" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom">
-                <TextBlock  x:Name="rightUserName" HorizontalAlignment="Center" VerticalAlignment="Center" Text="超级无敌暴龙战士" FontSize="20" Foreground="White"/>
+                <TextBlock  x:Name="rightUserName" HorizontalAlignment="Center" VerticalAlignment="Center" Text="玩家" FontSize="20" Foreground="White"/>
             </Viewbox>
         </Grid>
         <Grid Grid.Column="1" Grid.Row="4" Grid.RowSpan="3" Grid.ColumnSpan="2">
