--- a/work/Pages/Set.xaml
+++ b/work/Pages/Set.xaml
@@ -44,7 +44,7 @@
 
                     <TextBlock Text="&#xe659;" FontFamily="/work;component/Fonts/#iconfont"  FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
                     <TextBlock Text="Reset Name" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
-                    <TextBlock Text="跳转到历史记录" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
+                    <TextBlock Text="修改用户名" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
 
 
 
@@ -53,7 +53,7 @@
                         <Border Canvas.Right="-50" Canvas.Top="60" Grid.RowSpan="4" Width="110" Height="110" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right"/>
                         <Border Canvas.Right="-50" Canvas.Top="123" Grid.RowSpan="4" Width="50" Height="50" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right" Canvas.Left="142"/>
                     </Canvas>
-                    <Button Background="Transparent" BorderBrush="Transparent" Grid.RowSpan="4" Click="jumpToHistory" Name="ResetName" Style="{StaticResource RoundedButtonStyle}"/>
+                    <Button Background="Transparent" BorderBrush="Transparent" Grid.RowSpan="4" Click="resetName" Name="ResetName" Style="{StaticResource RoundedButtonStyle}"/>
                 </Grid>
             </Border>
 
@@ -74,9 +74,10 @@
                         <RowDefinition Height="2*"/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Text="&#xe601;" FontFamily="/work;component/Fonts/#iconfont" FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
+                    <TextBlock Text="&#xe632;
+" FontFamily="/work;component/Fonts/#iconfont" FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
                     <TextBlock Text="Reset Background" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
-                    <TextBlock Text="修改用户名" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
+                    <TextBlock Text="更换头像" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
 
 
 
@@ -85,7 +86,7 @@
                         <Border Canvas.Right="-50" Canvas.Top="34" Grid.RowSpan="4" Width="80" Height="80" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right" Canvas.Left="133"/>
                         <Border Canvas.Right="-50" Canvas.Top="101" Grid.RowSpan="4" Width="110" Height="110" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right" Canvas.Left="94"/>
                     </Canvas>
-                    <Button Background="Transparent" BorderBrush="Transparent" Grid.RowSpan="4" Click="resetName"  Style="{StaticResource RoundedButtonStyle}"/>
+                    <Button Background="Transparent" BorderBrush="Transparent" Grid.RowSpan="4" Click="resetHeadImage"  Style="{StaticResource RoundedButtonStyle}"/>
                 </Grid>
             </Border>
 
@@ -105,9 +106,10 @@ MouseLeave="Border_MouseLeave">
                         <RowDefinition Height="2*"/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Text="&#xe659;" FontFamily="/work;component/Fonts/#iconfont"  FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
+                    <TextBlock Text="&#xe618;" FontFamily="/work;component/Fonts/#iconfont"  FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
                     <TextBlock Text="Reset HeadImage" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
-                    <TextBlock Text="更换头像" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
+          
+                    <TextBlock Text="历史记录" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
 
 
 
@@ -117,7 +119,7 @@ MouseLeave="Border_MouseLeave">
                         <Border Canvas.Right="-50" Canvas.Top="114" Grid.RowSpan="4" Width="30" Height="30" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right" Canvas.Left="121"/>
                         <Border Canvas.Right="-50" Canvas.Top="34" Grid.RowSpan="4" Width="20" Height="20" CornerRadius="100" Background="#ffffff" Opacity="0.2" VerticalAlignment="Bottom"  HorizontalAlignment="Right" Canvas.Left="230"/>
                     </Canvas>
-                    <Button Background="Transparent" BorderBrush="Transparent" Grid.RowSpan="4" Click="resetHeadImage" Name="ResetHeadImage" Style="{StaticResource RoundedButtonStyle}"/>
+                    <Button Background="Transparent" BorderBrush="Transparent" Grid.RowSpan="4" Click="jumpToHistory" Name="ResetHeadImage" Style="{StaticResource RoundedButtonStyle}"/>
                 </Grid>
             </Border>
 
